welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: Boolean(true) does not take parameters
	return true()
                   ^sleepIn:6: error: Boolean(false) does not take parameters
		return false()
                            ^sleepIn:9: error: Boolean(true) does not take parameters
		return true()
                           ^sleepIn:12: error: Boolean(false) does not take parameters
		return false() 
                            ^